--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
+  },
+  "dependencies": {
+    "escape-html": "^1.0.3",
+    "striptags": "^3.1.1"
   }
 }
