--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "prod": "./node_modules/.bin/webpack --config webpack.production.js -p",
     "webpack:dev": "./node_modules/.bin/webpack -w",
     "webpack": "./node_modules/.bin/webpack",
     "start": "./node_modules/.bin/webpack-dev-server",
@@ -15,7 +16,7 @@
     "@babel/core": "^7.3.3",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
-    "autoprefixer": "^9.4.8",
+    "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
@@ -32,6 +33,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "cross-env": "^5.2.0",
     "escape-html": "^1.0.3",
     "striptags": "^3.1.1"
   }
